# LA104

./: .dockerignore  .gitignore  Dockerfile  LICENSE  build.sh  readme.md
experiments/blink/: app.lds  buildmac.sh  main.c  pinio.h  stm32f10x_conf.h
experiments/dynamic_simple/: Main.c  build.bat
experiments/triangle_cpp/: bios.h  buildmac.sh
experiments/triangle_newlib/: bios.h  buildmac.sh  main.c
experiments/triangle_oldlib/: main.c
experiments/worm/: Bios.h  Classes.h  Types.h  Utils.h  Wnd.cpp  app.lds  main.cpp
official_fw_gcc/: app.ld  buildwin.bat
official_fw_gcc/source/: Analyze.h  AppBios.c  Ctrl.c  Disk.c  Disk.h  Ext_Flash.c  FAT12.h  Files.c  Files.h  GUI.h  Interrupt.c  Interrupt.h  Main.c  Menu.c
resources/: readme.txt
resources/LCD/: LA104_HW_V1_4.h  LCD_9341_Drv.c
resources/official_fw_gcc/: buildmac.sh  cp.sh  startup.c
resources/tutorial_building/: readme.md
resources/wasmbuild/: index.html  z-worker.js  zip.js
system/: build.sh  build_all_apps.sh  build_wasm.sh  buildall.sh  help.txt  release.sh  release_image.sh  release_image_ds203.sh  release_image_ds213.sh  release_image_la104.sh
system/apps/test33_temper/: CMakeLists.txt  app.lds  build.sh  build_mac.sh  cp.sh  logger.h  main.cpp
system/apps/test33_temper/graph/: graph.h  palette.h
system/apps/test33_temper/sensor/: OneWire.cpp  ds1820.h
system/apps/test33_temper/visualize/: TEMPER01.HTM
system/apps/test37_i2cscan/: CMakeLists.txt  build.sh  devices.txt  main.cpp
system/apps/test41_alchemy/: CMakeLists.txt  Menu.h  app.lds  build.sh  cp.sh  main.cpp  shapes.h
system/apps/test41_alchemy/devices/: cc1101.h  spi.h
system/apps/test41_alchemy/layouts/: filter.h  meas.h  modem.h  modify.h
system/apps/test41_alchemy/logs/: ir_optibox.sig  ir_volumeup.sig  rf_keeloq.sig  rf_oregon1.sig  rf_unk_ba1.sig  rf_unk_ba2.sig  rf_unk_ba3.sig  rf_unk_ba4.sig  rf_unk_ba5.sig  rf_unk_sd1.sig  rf_unk_sd2.sig  rf_unk_sd3.sig  visualize.html
system/apps/test41_alchemy/source/: main.cpp  settings.h
system/apps/test41_alchemy/source/codecs/: codec.h  codecs.h  oregon.h  samsung.h  tvremote1.h  unknown1.h  unknown2.h  unknown3.h  unknown4.h  weather1.h
system/apps/test41_alchemy/source/controls/: button.h  histogram.h  signal.h  signalview.h
system/apps/test41_alchemy/source/devices/: cc1101.h  infra.h  raw.h  sampler.h
system/apps/test41_alchemy/source/devices/infra/: gpio.h  ir_code.h  ir_tx.c  ir_tx.h
system/apps/test41_alchemy/source/layouts/: analyse.h  file.h  filter.h  meas.h  modem.h  play.h
system/apps/test41_alchemy/source/layouts/file/: load.h  play.h  save.h
system/apps/test41_alchemy/source/layouts/meas/: menuitems.h
system/apps/test41_alchemy/source/layouts/modem/: cc1101.h  infra.h  raw.h
system/apps/test41_alchemy/source/utils/: Menu.h  shapes.h
system/apps/test41_alchemy/test/: library.h  main.cpp  test.sh
system/apps/test41_alchemy/utils/: Menu.h
system/apps/test49_gpio/: CMakeLists.txt  Menu.h  build.sh  digital.h  main.cpp  pwm.h  shapes2.h  stm32pwm.h
system/apps_experiments/113_circuitpython/: CMakeLists.txt  build.sh  readme.md
system/apps_experiments/113_circuitpython/source/: app.lds  assert.h  main.cpp  mpconfigport.h  platform.cpp
system/apps_experiments/113_circuitpython/source/bindings/: mini.c
system/apps_experiments/113_circuitpython/source/frozen/: test.c
system/apps_experiments/113_circuitpython/source/genhdr/: moduledefs.h  mpversion.h  qstrdefs.enum.h  qstrdefs.generated.h  qstrdefs.mini.h
system/apps_experiments/113_circuitpython/source/lib/utils/: pyexec.c  util.c
system/apps_experiments/113_circuitpython/source/py/: builtinhelp.c  circuitpy_mpconfig.h  mpconfig.h  persistentcode.c  qstr.h  smallint.c
system/apps_experiments/113_circuitpython/source/supervisor/: flash_root_pointers.h  linker.h
system/apps_featured/103_servo/: CMakeLists.txt  build.sh  circle.js  test.js
system/apps_featured/103_servo/source/: knob.h  knob2.h  main.cpp
system/apps_featured/103_servo/source/pca9685/: Adafruit_PWMServoDriver.cpp  Adafruit_PWMServoDriver.h  platform.cpp  platform.h
system/apps_shell/test28_shell/: CMakeLists.txt  app.lds  bitmap.h  build.sh  build_wasm.sh  cp.sh  main.cpp  menu.h
system/apps_shell/test28_shell/source/: bitmap.h  font.h  json.h  main.cpp
system/fpga_la104/: readme.md
system/hybrid/: CMakeLists.txt  build.sh  build_arm.sh  build_desktop.sh  toolchain.cmake
system/hybrid/include/: library.h
system/hybrid/sdltest/: sdlmain.cpp
system/hybrid/sdltest.xcodeproj/: project.pbxproj
system/hybrid/sdltest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
system/hybrid/sdltest/inc/: library.h
system/hybrid/sdltest/lib/SDL2.framework/: SDL2
system/hybrid/sdltest/lib/SDL2.framework/Versions/A/Headers/: SDL_blendmode.h
system/hybrid/sdltest/lib/bios/: Bios.h  dbg.cpp  fat.cpp  gpio.cpp  key.cpp  lcd.cpp  sys.cpp
system/hybrid/sdltest/lib/framework/: Framework.cpp  framework.cpp
system/hybrid/sdltest/lib/gui/: Gui.h
system/hybrid/source/: sdlmain.cpp
system/hybrid/source/bios/: Bios.h  dbg.cpp  fat.cpp  gpio.cpp  key.cpp  lcd.cpp  memory.cpp  sys.cpp
system/hybrid/source/framework/: framework.cpp
system/hybrid/source/gui/: Gui.h
system/os_host/: app.ld  app_ds203.ld  bios.h  build.sh  build_ds203.sh  build_ds203hd.sh  build_ds213.sh  build_la104.sh  build_la104_nousb.sh  cp.sh  cp_ds203.sh  cp_ds213.sh  crash.h  interrupt.c  main.cpp
system/os_library/: build.sh  build_ds203.sh  build_la104.sh  exports.js
system/os_platform/mac_sdl/: CMakeLists.txt  readme.md
system/os_platform/mac_sdl/source/: sdlhal.h  sdlmain.cpp
system/release/: 13mp3.elf  7pwm.elf  fileman.elf  manager.hex  shell.elf  system.hex  system_ds203.hex  system_ds213.hex  system_la104.hex  viewtxt.elf
system/scripts/: build.sh  build_applist.sh  build_apps.sh  build_check.sh  build_full.sh  build_m1.sh  build_minimal.sh  build_os.sh  build_wasm.sh  generate_applist.js  generate_memlist.sh  imagefile_copy_la104.sh  (+5 more)
tools/elfstrip/: CMakeLists.txt  build.sh  elfstrip  main.cpp
(+2564 files in other folders)
